testing effects with parameters

--- a/MyFirst2DPixelShader/CuttingEffect/CuttingEffect/CuttingEffect.csproj
+++ b/MyFirst2DPixelShader/CuttingEffect/CuttingEffect/CuttingEffect.csproj
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{78813C34-D5BE-4955-B210-ABD089503C2D}</ProjectGuid>
+    <ProjectGuid>{9167C967-997E-4C75-A27B-D923D0855971}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MyFirst2DPixelShader</RootNamespace>
-    <AssemblyName>MyFirst2DPixelShader</AssemblyName>
+    <RootNamespace>CuttingEffect</RootNamespace>
+    <AssemblyName>CuttingEffect</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>05548702-d07f-42b3-920e-767721a93348</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>abd602a2-705d-4a53-b2ed-56272b0daa0c</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
@@ -83,13 +83,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyFirst2DPixelShaderContent\SharedContent.contentproj">
-      <Name>SharedContent</Name>
-      <XnaReferenceType>Content</XnaReferenceType>
-      <Project>{419DE108-3414-4292-9A44-FAE03D4B8490}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
@@ -110,6 +103,13 @@
       <ProductName>Windows Installer 4.5</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MyFirst2DPixelShader\MyFirst2DPixelShaderContent\SharedContent.contentproj">
+      <Project>{419DE108-3414-4292-9A44-FAE03D4B8490}</Project>
+      <Name>SharedContent</Name>
+      <XnaReferenceType>Content</XnaReferenceType>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
