basic gameplay completed

--- a/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
+++ b/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
@@ -73,9 +73,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Art.cs" />
+    <Compile Include="Bullet.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EntityManager.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="MathUtil.cs" />
     <Compile Include="PlayerShip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
