--- a/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
+++ b/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Art.cs" />
     <Compile Include="Bullet.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="EnemySpawner.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EntityManager.cs" />
     <Compile Include="Extensions.cs" />
