--- a/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
+++ b/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameRoot.cs" />
+    <Compile Include="Sound.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
