--- a/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
+++ b/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
@@ -72,21 +72,24 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Art.cs" />
-    <Compile Include="Bullet.cs" />
-    <Compile Include="Enemy.cs" />
-    <Compile Include="EnemySpawner.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="EntityManager.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Input.cs" />
-    <Compile Include="MathUtil.cs" />
-    <Compile Include="PlayerShip.cs" />
-    <Compile Include="PlayerStatus.cs" />
+    <Compile Include="Contents\Art.cs" />
+    <Compile Include="BloomProcessor\BloomComponent.cs" />
+    <Compile Include="BloomProcessor\BloomSettings.cs" />
+    <Compile Include="Entities\BlackHole.cs" />
+    <Compile Include="Entities\Bullet.cs" />
+    <Compile Include="Entities\Enemy.cs" />
+    <Compile Include="Managers\EnemySpawner.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Managers\EntityManager.cs" />
+    <Compile Include="Helpers\Extensions.cs" />
+    <Compile Include="Managers\Input.cs" />
+    <Compile Include="Helpers\MathUtil.cs" />
+    <Compile Include="Entities\PlayerShip.cs" />
+    <Compile Include="Managers\PlayerStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameRoot.cs" />
-    <Compile Include="Sound.cs" />
+    <Compile Include="Contents\Sound.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
