--- a/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
+++ b/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter/NeonVectorShooter.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Entities\BlackHole.cs" />
     <Compile Include="Entities\Bullet.cs" />
     <Compile Include="Entities\Enemy.cs" />
+    <Compile Include="Helpers\CircularArray.cs" />
+    <Compile Include="Helpers\ColorUtil.cs" />
     <Compile Include="Managers\EnemySpawner.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Managers\EntityManager.cs" />
@@ -86,6 +88,10 @@
     <Compile Include="Helpers\MathUtil.cs" />
     <Compile Include="Entities\PlayerShip.cs" />
     <Compile Include="Managers\PlayerStatus.cs" />
+    <Compile Include="ParticleSystem\Particle.cs" />
+    <Compile Include="ParticleSystem\ParticleManager.cs" />
+    <Compile Include="ParticleSystem\ParticleState.cs" />
+    <Compile Include="ParticleSystem\ParticleType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameRoot.cs" />
