--- a/SonicAcceleration/SonicAcceleration/SonicAcceleration/SonicAcceleration.csproj
+++ b/SonicAcceleration/SonicAcceleration/SonicAcceleration/SonicAcceleration.csproj
@@ -72,11 +72,21 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animation.cs" />
+    <Compile Include="Animations\Animation.cs" />
+    <Compile Include="Animations\AnimationFrame.cs" />
+    <Compile Include="SonicAnimations\AnimationsManager.cs" />
+    <Compile Include="Animations\FrameInformation.cs" />
+    <Compile Include="Animations\IAnimation.cs" />
+    <Compile Include="Animations\IAnimationFrame.cs" />
+    <Compile Include="Animations\LimitedAnimation.cs" />
+    <Compile Include="SonicAnimations\AnimationType.cs" />
+    <Compile Include="SonicAnimations\Idle.cs" />
+    <Compile Include="SonicAnimations\Waiting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameRoot.cs" />
     <Compile Include="Sonic.cs" />
+    <Compile Include="SonicControlTracker.cs" />
     <Compile Include="SonicDrawer.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +123,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
