--- a/SonicAcceleration/SonicAcceleration/SonicAcceleration/SonicAcceleration.csproj
+++ b/SonicAcceleration/SonicAcceleration/SonicAcceleration/SonicAcceleration.csproj
@@ -82,6 +82,7 @@
     <Compile Include="SonicAnimations\AnimationType.cs" />
     <Compile Include="SonicAnimations\Idle.cs" />
     <Compile Include="SonicAnimations\Running.cs" />
+    <Compile Include="SonicAnimations\Stopping.cs" />
     <Compile Include="SonicAnimations\Waiting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
