drag & drop functionality added

--- a/ZombieSmashers/MapEditor/MapEditor/MapEditor.csproj
+++ b/ZombieSmashers/MapEditor/MapEditor/MapEditor.csproj
@@ -74,8 +74,10 @@
   <ItemGroup>
     <Compile Include="Art.cs" />
     <Compile Include="Helpers\IntHelper.cs" />
+    <Compile Include="Helpers\Vector2Helper.cs" />
     <Compile Include="MapClasses\Map.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
+    <Compile Include="MapSegment.cs" />
     <Compile Include="MouseControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
