initial ledge mode added

--- a/ZombieSmashers/MapEditor/MapEditor/MapEditor.csproj
+++ b/ZombieSmashers/MapEditor/MapEditor/MapEditor.csproj
@@ -75,12 +75,14 @@
     <Compile Include="AreaRectangle.cs" />
     <Compile Include="Art.cs" />
     <Compile Include="DrawingMode.cs" />
+    <Compile Include="Helpers\EnumerableHelper.cs" />
     <Compile Include="Helpers\IntHelper.cs" />
     <Compile Include="Helpers\RectangleHelper.cs" />
     <Compile Include="Helpers\Vector2Helper.cs" />
+    <Compile Include="MapClasses\Ledge.cs" />
     <Compile Include="MapClasses\Map.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
-    <Compile Include="MapSegment.cs" />
+    <Compile Include="MapClasses\MapSegment.cs" />
     <Compile Include="MouseControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
