--- a/ZombieSmashers/MapEditor/MapEditor/MapEditor.csproj
+++ b/ZombieSmashers/MapEditor/MapEditor/MapEditor.csproj
@@ -102,9 +102,12 @@
     <Compile Include="Ioc\Api\Gui\IGuiText.cs" />
     <Compile Include="Ioc\Api\Input\IMouseInput.cs" />
     <Compile Include="Ioc\Api\Input\IMouseComponent.cs" />
-    <Compile Include="Ioc\Api\Settings\IReadableSettings.cs" />
+    <Compile Include="Ioc\Api\Map\IMapComponent.cs" />
+    <Compile Include="Ioc\Api\Map\IMapData.cs" />
+    <Compile Include="Ioc\Api\Settings\IReadOnlySettings.cs" />
     <Compile Include="Ioc\Api\Settings\ISettings.cs" />
     <Compile Include="Ioc\App.cs" />
+    <Compile Include="Ioc\Api\Map\IReadonlyMapData.cs" />
     <Compile Include="MapClasses\Ledge.cs" />
     <Compile Include="MapClasses\Map.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
@@ -156,6 +159,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
