--- a/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
+++ b/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
@@ -76,9 +76,16 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Art.cs" />
+    <Compile Include="Character\Animation.cs" />
+    <Compile Include="Character\Definition.cs" />
+    <Compile Include="Character\Frame.cs" />
+    <Compile Include="Character\KeyFrame.cs" />
+    <Compile Include="Character\Part.cs" />
+    <Compile Include="Ioc\App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="GameRoot.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -109,6 +116,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Helpers\Helpers.csproj">
+      <Project>{64e0e6a9-80b6-4ae8-91cf-61a3c66dba55}</Project>
+      <Name>Helpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\TextLib\TextLib.csproj">
       <Project>{e5b96545-ea95-4a80-8ffd-b36cb49b4004}</Project>
       <Name>TextLib</Name>
