--- a/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
+++ b/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
@@ -82,6 +82,20 @@
     <Compile Include="Character\Frame.cs" />
     <Compile Include="Character\KeyFrame.cs" />
     <Compile Include="Character\Part.cs" />
+    <Compile Include="Editor\Controls\Icons\IconsPallete.cs" />
+    <Compile Include="Editor\Controls\Icons\PalleteItem.cs" />
+    <Compile Include="Editor\Controls\Part\DeleteButton.cs" />
+    <Compile Include="Editor\Controls\Part\MirrorButton.cs" />
+    <Compile Include="Editor\Controls\Part\PartsPallete.cs" />
+    <Compile Include="Editor\Controls\Part\PartSelector.cs" />
+    <Compile Include="Editor\Controls\Part\ResetButton.cs" />
+    <Compile Include="Editor\Controls\Part\SwapDownButton.cs" />
+    <Compile Include="Editor\Controls\Part\SwapUpButton.cs" />
+    <Compile Include="Editor\Settings.cs" />
+    <Compile Include="Ioc\Api\Editor\IIconsPalleteComponent.cs" />
+    <Compile Include="Ioc\Api\Editor\IPartsPalleteComponent.cs" />
+    <Compile Include="Ioc\Api\Settings\IReadonlySettings.cs" />
+    <Compile Include="Ioc\Api\Settings\ISettings.cs" />
     <Compile Include="Ioc\App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
@@ -116,9 +130,21 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\GraphicalUserInterfaceLib\GraphicalUserInterfaceLib.csproj">
+      <Project>{79e7513d-8e54-483e-9408-af19b90b8c24}</Project>
+      <Name>GraphicalUserInterfaceLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Helpers\Helpers.csproj">
       <Project>{64e0e6a9-80b6-4ae8-91cf-61a3c66dba55}</Project>
       <Name>Helpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\MouseLib\MouseLib.csproj">
+      <Project>{c3cc48ce-5faa-4135-a317-3856e64230c5}</Project>
+      <Name>MouseLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SharedContentLib\SharedLib.csproj">
+      <Project>{499EDC9A-B3B7-4097-AD15-1A3DC4B37C16}</Project>
+      <Name>SharedLib</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\TextLib\TextLib.csproj">
       <Project>{e5b96545-ea95-4a80-8ffd-b36cb49b4004}</Project>
