--- a/ZombieSmashers/packages/repositories.config
+++ b/ZombieSmashers/packages/repositories.config
@@ -5,5 +5,6 @@
   <repository path="..\KeyboardLib\packages.config" />
   <repository path="..\MapEditor\MapEditor\packages.config" />
   <repository path="..\MouseLib\packages.config" />
+  <repository path="..\SharedContentLib\packages.config" />
   <repository path="..\TextLib\packages.config" />
 </repositories>
