initial addition of frame's palette

--- a/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
+++ b/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
@@ -82,18 +82,21 @@
     <Compile Include="Character\Frame.cs" />
     <Compile Include="Character\KeyFrame.cs" />
     <Compile Include="Character\Part.cs" />
-    <Compile Include="Editor\Controls\Icons\IconsPallete.cs" />
-    <Compile Include="Editor\Controls\Icons\PalleteItem.cs" />
+    <Compile Include="Editor\Controls\Frame\FramesPalette.cs" />
+    <Compile Include="Editor\Controls\Frame\FrameScroll.cs" />
+    <Compile Include="Editor\Controls\Frame\FrameSelector.cs" />
+    <Compile Include="Editor\Controls\Icons\IconsPalette.cs" />
+    <Compile Include="Editor\Controls\Icons\IconPaletteItem.cs" />
     <Compile Include="Editor\Controls\Part\DeleteButton.cs" />
     <Compile Include="Editor\Controls\Part\MirrorButton.cs" />
-    <Compile Include="Editor\Controls\Part\PartsPallete.cs" />
+    <Compile Include="Editor\Controls\Part\PartSelectorItem.cs" />
+    <Compile Include="Editor\Controls\Part\PartsPalette.cs" />
     <Compile Include="Editor\Controls\Part\PartSelector.cs" />
     <Compile Include="Editor\Controls\Part\ResetButton.cs" />
     <Compile Include="Editor\Controls\Part\SwapDownButton.cs" />
     <Compile Include="Editor\Controls\Part\SwapUpButton.cs" />
+    <Compile Include="Editor\GuiManager.cs" />
     <Compile Include="Editor\Settings.cs" />
-    <Compile Include="Ioc\Api\Editor\IIconsPalleteComponent.cs" />
-    <Compile Include="Ioc\Api\Editor\IPartsPalleteComponent.cs" />
     <Compile Include="Ioc\Api\Settings\IReadonlySettings.cs" />
     <Compile Include="Ioc\Api\Settings\ISettings.cs" />
     <Compile Include="Ioc\App.cs" />
