--- a/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
+++ b/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Character\Frame.cs" />
     <Compile Include="Character\KeyFrame.cs" />
     <Compile Include="Character\Part.cs" />
+    <Compile Include="Editor\Controls\Frame\AddFrameButton.cs" />
     <Compile Include="Editor\Controls\Frame\FrameNameEditor.cs" />
     <Compile Include="Editor\Controls\Frame\FrameSelectorItem.cs" />
     <Compile Include="Editor\Controls\Frame\FramesPalette.cs" />
