--- a/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
+++ b/ZombieSmashers/CharacterEditor/CharacterEditor/CharacterEditor.csproj
@@ -82,22 +82,21 @@
     <Compile Include="Character\Frame.cs" />
     <Compile Include="Character\KeyFrame.cs" />
     <Compile Include="Character\Part.cs" />
-    <Compile Include="Editor\Controls\Frame\AddFrameButton.cs" />
-    <Compile Include="Editor\Controls\Frame\FrameNameEditor.cs" />
-    <Compile Include="Editor\Controls\Frame\FrameSelectorItem.cs" />
-    <Compile Include="Editor\Controls\Frame\FramesPalette.cs" />
-    <Compile Include="Editor\Controls\Frame\FrameScroll.cs" />
-    <Compile Include="Editor\Controls\Frame\FrameSelector.cs" />
+    <Compile Include="Editor\Controls\Frames\AddFrameButton.cs" />
+    <Compile Include="Editor\Controls\Frames\FrameNameEditor.cs" />
+    <Compile Include="Editor\Controls\Frames\FramesPalette.cs" />
+    <Compile Include="Editor\Controls\Frames\FrameScroll.cs" />
+    <Compile Include="Editor\Controls\Frames\FrameSelector.cs" />
     <Compile Include="Editor\Controls\Icons\IconsPalette.cs" />
     <Compile Include="Editor\Controls\Icons\IconPaletteItem.cs" />
-    <Compile Include="Editor\Controls\Part\DeleteButton.cs" />
-    <Compile Include="Editor\Controls\Part\MirrorButton.cs" />
-    <Compile Include="Editor\Controls\Part\PartSelectorItem.cs" />
-    <Compile Include="Editor\Controls\Part\PartsPalette.cs" />
-    <Compile Include="Editor\Controls\Part\PartSelector.cs" />
-    <Compile Include="Editor\Controls\Part\ResetButton.cs" />
-    <Compile Include="Editor\Controls\Part\SwapDownButton.cs" />
-    <Compile Include="Editor\Controls\Part\SwapUpButton.cs" />
+    <Compile Include="Editor\Controls\Parts\DeleteButton.cs" />
+    <Compile Include="Editor\Controls\Parts\MirrorButton.cs" />
+    <Compile Include="Editor\Controls\Parts\PartSelectorItem.cs" />
+    <Compile Include="Editor\Controls\Parts\PartsPalette.cs" />
+    <Compile Include="Editor\Controls\Parts\PartSelector.cs" />
+    <Compile Include="Editor\Controls\Parts\ResetButton.cs" />
+    <Compile Include="Editor\Controls\Parts\SwapDownButton.cs" />
+    <Compile Include="Editor\Controls\Parts\SwapUpButton.cs" />
     <Compile Include="Editor\GuiManager.cs" />
     <Compile Include="Editor\Settings.cs" />
     <Compile Include="Ioc\Api\Settings\IReadonlySettings.cs" />
