--- a/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
+++ b/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
@@ -63,15 +63,21 @@
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
-    <Reference Include="Microsoft.Xna.Framework.GamerServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
-    <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CharClasses\Animation.cs" />
+    <Compile Include="CharClasses\Character.cs" />
+    <Compile Include="CharClasses\CharDef.cs" />
+    <Compile Include="CharClasses\Frame.cs" />
+    <Compile Include="CharClasses\KeyFrame.cs" />
+    <Compile Include="CharClasses\Part.cs" />
+    <Compile Include="MapClasses\Ledge.cs" />
+    <Compile Include="MapClasses\Map.cs" />
+    <Compile Include="MapClasses\MapSegment.cs" />
+    <Compile Include="MapClasses\SegmentDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -110,6 +116,15 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="data\chars\guy.zmx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="data\maps\map.zmx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
