--- a/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
+++ b/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
@@ -74,9 +74,13 @@
     <Compile Include="CharClasses\CharDef.cs" />
     <Compile Include="CharClasses\CharDir.cs" />
     <Compile Include="CharClasses\CharState.cs" />
+    <Compile Include="CharClasses\Commands.cs" />
     <Compile Include="CharClasses\Frame.cs" />
     <Compile Include="CharClasses\KeyFrame.cs" />
     <Compile Include="CharClasses\Part.cs" />
+    <Compile Include="CharClasses\PressedKeys.cs" />
+    <Compile Include="CharClasses\Script.cs" />
+    <Compile Include="CharClasses\ScriptLine.cs" />
     <Compile Include="Input\ControlInput.cs" />
     <Compile Include="Input\GamePadControlInput.cs" />
     <Compile Include="Input\IControlInput.cs" />
