--- a/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
+++ b/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
@@ -90,6 +90,7 @@
     <Compile Include="MapClasses\Map.cs" />
     <Compile Include="MapClasses\MapSegment.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
+    <Compile Include="Particles\Fire.cs" />
     <Compile Include="Particles\Particle.cs" />
     <Compile Include="Particles\ParticlesManager.cs" />
     <Compile Include="Particles\Smoke.cs" />
