--- a/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
+++ b/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
@@ -81,6 +81,7 @@
     <Compile Include="CharClasses\PressedKeys.cs" />
     <Compile Include="CharClasses\Script.cs" />
     <Compile Include="CharClasses\ScriptLine.cs" />
+    <Compile Include="GlobalFunctions .cs" />
     <Compile Include="Input\ControlInput.cs" />
     <Compile Include="Input\GamePadControlInput.cs" />
     <Compile Include="Input\IControlInput.cs" />
@@ -91,7 +92,9 @@
     <Compile Include="MapClasses\MapSegment.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
     <Compile Include="MapClasses\SegmentFlags.cs" />
+    <Compile Include="Particles\Bullet.cs" />
     <Compile Include="Particles\Fire.cs" />
+    <Compile Include="Particles\MuzzleFlash.cs" />
     <Compile Include="Particles\Particle.cs" />
     <Compile Include="Particles\ParticlesManager.cs" />
     <Compile Include="Particles\Smoke.cs" />
