--- a/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
+++ b/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
@@ -82,6 +82,7 @@
     <Compile Include="CharClasses\Script.cs" />
     <Compile Include="CharClasses\ScriptLine.cs" />
     <Compile Include="GlobalFunctions .cs" />
+    <Compile Include="HitManager.cs" />
     <Compile Include="Input\ControlInput.cs" />
     <Compile Include="Input\GamePadControlInput.cs" />
     <Compile Include="Input\IControlInput.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="MapClasses\MapSegment.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
     <Compile Include="MapClasses\SegmentFlags.cs" />
+    <Compile Include="Particles\Blood.cs" />
     <Compile Include="Particles\Bullet.cs" />
     <Compile Include="Particles\Fire.cs" />
     <Compile Include="Particles\MuzzleFlash.cs" />
