--- a/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
+++ b/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
@@ -92,9 +92,15 @@
     <Compile Include="Input\GamePadControlInput.cs" />
     <Compile Include="Input\IControlInput.cs" />
     <Compile Include="Input\KeyboardControlInput.cs" />
+    <Compile Include="MapClasses\Bucket .cs" />
+    <Compile Include="MapClasses\BucketItem.cs" />
     <Compile Include="MapClasses\Ledge.cs" />
     <Compile Include="MapClasses\LedgeFlags.cs" />
     <Compile Include="MapClasses\Map.cs" />
+    <Compile Include="MapClasses\MapCommands.cs" />
+    <Compile Include="MapClasses\MapFlags.cs" />
+    <Compile Include="MapClasses\MapScript.cs" />
+    <Compile Include="MapClasses\MapScriptLine.cs" />
     <Compile Include="MapClasses\MapSegment.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
     <Compile Include="MapClasses\SegmentFlags.cs" />
@@ -102,6 +108,7 @@
     <Compile Include="Particles\BloodDust.cs" />
     <Compile Include="Particles\Bullet.cs" />
     <Compile Include="Particles\Fire.cs" />
+    <Compile Include="Particles\Fog.cs" />
     <Compile Include="Particles\Hit.cs" />
     <Compile Include="Particles\MuzzleFlash.cs" />
     <Compile Include="Particles\Particle.cs" />
