--- a/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
+++ b/ZombieSmashersOriginal/ZombieSmashers/ZombieSmashers/ZombieSmashers.csproj
@@ -86,7 +86,16 @@
     <Compile Include="CharClasses\PressedKeys.cs" />
     <Compile Include="CharClasses\Script.cs" />
     <Compile Include="CharClasses\ScriptLine.cs" />
+    <Compile Include="GameModes .cs" />
     <Compile Include="GlobalFunctions .cs" />
+    <Compile Include="Gui\Hud.cs" />
+    <Compile Include="Gui\Justification.cs" />
+    <Compile Include="Gui\Level.cs" />
+    <Compile Include="Gui\Menu.cs" />
+    <Compile Include="Gui\MenuMode.cs" />
+    <Compile Include="Gui\Option.cs" />
+    <Compile Include="Gui\ScoreDraw.cs" />
+    <Compile Include="Gui\Trans.cs" />
     <Compile Include="HitManager.cs" />
     <Compile Include="Input\ControlInput.cs" />
     <Compile Include="Input\GamePadControlInput.cs" />
@@ -104,6 +113,7 @@
     <Compile Include="MapClasses\MapSegment.cs" />
     <Compile Include="MapClasses\SegmentDefinition.cs" />
     <Compile Include="MapClasses\SegmentFlags.cs" />
+    <Compile Include="MapClasses\TransitionDirection .cs" />
     <Compile Include="Particles\Blood.cs" />
     <Compile Include="Particles\BloodDust.cs" />
     <Compile Include="Particles\Bullet.cs" />
@@ -167,6 +177,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="data\chars\zombie.zmx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="data\maps\start.zmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
